--- a/web/WEB-STATIC/lovestory/view/note/note.html
+++ b/web/WEB-STATIC/lovestory/view/note/note.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../../resources/jquery-easyui-1.7.6/themes/material-teal/easyui.css">
+    <link rel="stylesheet" href="../../resources/jquery-easyui-1.7.6/themes/icon.css">
+    <script src="../../resources/jquery-easyui-1.7.6/jquery.min.js"></script>
+    <script src="../../resources/jquery-easyui-1.7.6/jquery.easyui.min.js"></script>
 </head>
-<body>
-
+<body class="easyui-layout">
+    <div data-options="region:'west'" style="width: 20%;">
+        算得上是发生
+    </div>
+    <div data-options="region:'center',border:false">
+        <div class="easyui-layout" data-options="fit:true">
+            <div data-options="region:'west'" style="width:25%">
+                算得上是发生
+            </div>
+            <div data-options="region:'center',border:false">
+                asdf
+            </div>
+        </div>
+    </div>
 </body>
 </html>
