--- a/web/WEB-STATIC/lovestory/view/note/note.html
+++ b/web/WEB-STATIC/lovestory/view/note/note.html
@@ -3,19 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../../resources/bootstrap-4.2.1/css/bootstrap.css">
     <link rel="stylesheet" href="../../resources/jquery-easyui-1.7.6/themes/material-teal/easyui.css">
     <link rel="stylesheet" href="../../resources/jquery-easyui-1.7.6/themes/icon.css">
     <script src="../../resources/jquery-easyui-1.7.6/jquery.min.js"></script>
+    <script src="../../resources/bootstrap-4.2.1/js/bootstrap.js"></script>
     <script src="../../resources/jquery-easyui-1.7.6/jquery.easyui.min.js"></script>
 </head>
 <body class="easyui-layout">
     <div data-options="region:'west'" style="width: 20%;">
-        算得上是发生
+
+        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Homevvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvb</a>
+            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+        </div>
+
     </div>
     <div data-options="region:'center',border:false">
         <div class="easyui-layout" data-options="fit:true">
             <div data-options="region:'west'" style="width:25%">
-                算得上是发生
+                <div class="nav flex-column nav-pills" id="v-pills-tab2" role="tablist" aria-orientation="vertical">
+                    <a class="nav-link active" id="v-pills-home-tab2" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+                    <a class="nav-link" id="v-pills-profile-tab2" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+                    <a class="nav-link" id="v-pills-messages-tab2" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+                    <a class="nav-link" id="v-pills-settings-tab2" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+                </div>
             </div>
             <div data-options="region:'center',border:false">
                 asdf
