--- a/web/WEB-STATIC/lovestory/view/note/note.html
+++ b/web/WEB-STATIC/lovestory/view/note/note.html
@@ -32,7 +32,92 @@
                 </div>
             </div>
             <div data-options="region:'center',border:false">
-                asdf
+                <div id="sm" class="easyui-sidemenu" data-options="data:data"></div>
+                <div id="mm" class="easyui-menu" style="width:120px;">
+                    <div onclick="javascript:alert('new')">New</div>
+                    <div>
+                        <span>Open</span>
+                        <div style="width:150px;">
+                            <div><b>Word</b></div>
+                            <div>Excel</div>
+                            <div>PowerPoint</div>
+                            <div>
+                                <span>M1</span>
+                                <div style="width:120px;">
+                                    <div>sub1</div>
+                                    <div>sub2</div>
+                                    <div>
+                                        <span>Sub</span>
+                                        <div style="width:80px;">
+                                            <div onclick="javascript:alert('sub21')">sub21</div>
+                                            <div>sub22</div>
+                                            <div>sub23</div>
+                                        </div>
+                                    </div>
+                                    <div>sub3</div>
+                                </div>
+                            </div>
+                            <div>
+                                <span>Window Demos</span>
+                                <div style="width:120px;">
+                                    <div data-options="href:'window.html'">Window</div>
+                                    <div data-options="href:'dialog.html'">Dialog</div>
+                                    <div><a href="http://www.jeasyui.com" target="_blank">EasyUI</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <script type="text/javascript">
+                    var data = [{
+                        text: 'Item1',
+                        iconCls: 'icon-sum',
+                        state: 'open',
+                        id:'sildmenu01',
+                        children: [{
+                            iconCls: 'icon-sum',
+                            text: 'Option1'
+                        },{
+                            text: 'Option2'
+                        },{
+                            text: 'Option3',
+                            children: [{
+                                text: 'Option31'
+                            },{
+                                text: 'Option32'
+                            }]
+                        }]
+                    },{
+                        id:'sildmenu02',
+                        name:'sildmenu02',
+                        text: 'Item2',
+                        iconCls: 'icon-more',
+                        children: [{
+                            text: 'Option4'
+                        },{
+                            text: 'Option5'
+                        },{
+                            text: 'Option6'
+                        }]
+                    }];
+
+                    function toggle(){
+                        var opts = $('#sm').sidemenu('options');
+                        $('#sm').sidemenu(opts.collapsed ? 'expand' : 'collapse');
+                        opts = $('#sm').sidemenu('options');
+                        $('#sm').sidemenu('resize', {
+                            width: opts.collapsed ? 60 : 200
+                        })
+                    }
+                    $(function(){
+                        $('#sm').bind('contextmenu',function(e){
+                            e.preventDefault();
+                            $('#mm').menu('show', {
+                                left: e.pageX,
+                                top: e.pageY
+                            });
+                        });
+                    });
+                </script>
             </div>
         </div>
     </div>
