--- a/web/WEB-STATIC/lovestory/view/user/signup.html
+++ b/web/WEB-STATIC/lovestory/view/user/signup.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>bubu-</title>
-    <link rel="stylesheet" href="../../resources/bootstrap-4.2.1/css/bootstrap.css">
+    <link rel="stylesheet" href="../../resources/bootstrap-4.3.1-dist/css/bootstrap.css">
     <script src="../../resources/jquery/jquery-1.10.2.js"></script>
-    <script src="../../resources/bootstrap-4.2.1/js/bootstrap.js"></script>
+    <script src="../../resources/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
     <script src="../../resources/custom/user/signin.js"></script>
-
 </head>
 <body>
 <div class="container mt-5">
