--- a/web/WEB-STATIC/lovestory/view/user/signin.html
+++ b/web/WEB-STATIC/lovestory/view/user/signin.html
@@ -5,7 +5,7 @@
     <title>bubu-</title>
     <link rel="stylesheet" href="../../resources/bootstrap-4.3.1-dist/css/bootstrap.css">
     <script src="../../resources/jquery/jquery-1.10.2.js"></script>
-    <script src="../../resources/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
+    <script src="../../resources/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
     <script src="../../resources/custom/user/signin.js"></script>
     <script src="../../resources/artdialog-7.0.0/js/dialog-plus.js"></script>
     <script src="../../resources/custom/js/lovestory.js"></script>
