添加网络爬虫honeybee项目--fanfaction

--- a/web/WEB-STATIC/fanfaction/view/fanfaction.html
+++ b/web/WEB-STATIC/fanfaction/view/fanfaction.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>爬虫-fanfaction</title>
+    <title>-fanfaction</title>
     <link rel="stylesheet" href="fanfaction/static/bootstrap-4.3.1-dist/css/bootstrap.css">
     <script src="fanfaction/static/jquery/jquery-1.10.2.js"></script>
     <script src="fanfaction/static/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
