--- a/web/WEB-STATIC/mobi/view/mobi.html
+++ b/web/WEB-STATIC/mobi/view/mobi.html
@@ -14,7 +14,7 @@
 </head>
 <body class="body-bg-mobi">
 <nav class="navbar fixed-top navbar-mobi shadow-sm">
-    <div class="container">
+    <div class="container p-0">
 
         <ul class="nav">
             <a class="navbar-brand" href="#">布布</a>
@@ -154,7 +154,12 @@
 
         </div>
     </div>
-
 </main>
+
+<footer class="footer mt-auto py-3">
+    <div class="container p-0">
+        <span class="text-muted">Place sticky footer content here.</span>
+    </div>
+</footer>
 </body>
 </html>
