--- a/web/WEB-STATIC/mobi/view/detail.html
+++ b/web/WEB-STATIC/mobi/view/detail.html
@@ -63,9 +63,34 @@
                             </div>
                             <div class="col-md-9">
                                 <div class="card-body p-0">
-
-                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-
+                                    <table class="table table-sm table-borderless">
+                                        <tbody>
+                                            <tr>
+                                                <td>书名：培养男子汉</td>
+                                            </tr>
+                                            <tr>
+                                                <td>作者：王二</td>
+                                            </tr>
+                                            <tr>
+                                                <td>格式：mobi/txt</td>
+                                            </tr>
+                                            <tr>
+                                                <td>浏览：11111</td>
+                                            </tr>
+                                            <tr>
+                                                <td>标签：励志</td>
+                                            </tr>
+                                            <tr>
+                                                <td>时间：2019年7月16</td>
+                                            </tr>
+                                            <tr>
+                                                <td>评分：4.5分</td>
+                                            </tr>
+                                            <tr>
+                                                <td>ISBN：23453242134</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
