--- a/web/WEB-STATIC/mobi/view/manage/manage.html
+++ b/web/WEB-STATIC/mobi/view/manage/manage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../resources/jquery-easyui-1.8.2/themes/icon.css">
     <script src="../../resources/jquery-easyui-1.8.2/jquery.min.js"></script>
     <script src="../../resources/jquery-easyui-1.8.2/jquery.easyui.min.js"></script>
+    <script src="../../resources/jquery-easyui-1.8.2/locale/easyui-lang-zh_CN.js"></script>
 </head>
 <body class="easyui-layout">
     <div data-options="region:'north'" style="height:70px">
@@ -39,19 +40,101 @@
         </script>
     </div>
     <div data-options="region:'center'">
-        <table id="dg" class="easyui-datagrid" title="Fluid DataGrid"
-               data-options="singleSelect:true,collapsible:true,url:'datagrid_data1.json',method:'get'">
+        <table id="dg" title="用户管理" class="easyui-datagrid"
+               url="get_users.php"
+               toolbar="#toolbar" pagination="true"
+               rownumbers="true" fitColumns="true" singleSelect="true"
+               data-options="fit:true,border:false">
             <thead>
             <tr>
-                <th data-options="field:'itemid',resizable:false" width="15%">Item ID(15%)</th>
-                <th data-options="field:'productid',resizable:false" width="15%">Product(15%)</th>
-                <th data-options="field:'listprice',align:'right',resizable:false" width="15%">List Price(15%)</th>
-                <th data-options="field:'unitcost',align:'right',resizable:false" width="15%">Unit Cost(15%)</th>
-                <th data-options="field:'attr1',resizable:false" width="25%">Attribute(25%)</th>
-                <th data-options="field:'status',align:'center',resizable:false" width="15%">Status(15%)</th>
+                <th field="firstname" width="50">First Name</th>
+                <th field="lastname" width="50">Last Name</th>
+                <th field="phone" width="50">Phone</th>
+                <th field="email" width="50">Email</th>
             </tr>
             </thead>
         </table>
+        <div id="toolbar">
+            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="newUser()">新增用户</a>
+            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editUser()">修改用户</a>
+            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="destroyUser()">删除用户</a>
+        </div>
+        <div id="dlg" class="easyui-dialog" style="width:400px" data-options="closed:true,modal:true,border:'thin',buttons:'#dlg-buttons'">
+            <form id="fm" method="post" novalidate style="margin:0;padding:20px 50px">
+                <h3>User Information</h3>
+                <div style="margin-bottom:10px">
+                    <input name="firstname" class="easyui-textbox" required="true" label="First Name:" style="width:100%">
+                </div>
+                <div style="margin-bottom:10px">
+                    <input name="lastname" class="easyui-textbox" required="true" label="Last Name:" style="width:100%">
+                </div>
+                <div style="margin-bottom:10px">
+                    <input name="phone" class="easyui-textbox" required="true" label="Phone:" style="width:100%">
+                </div>
+                <div style="margin-bottom:10px">
+                    <input name="email" class="easyui-textbox" required="true" validType="email" label="Email:" style="width:100%">
+                </div>
+            </form>
+        </div>
+        <div id="dlg-buttons">
+            <a href="javascript:void(0)" class="easyui-linkbutton c6" iconCls="icon-ok" onclick="saveUser()" style="width:90px">Save</a>
+            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-cancel" onclick="javascript:$('#dlg').dialog('close')" style="width:90px">Cancel</a>
+        </div>
+        <script type="text/javascript">
+            var url;
+            function newUser(){
+                $('#dlg').dialog('open').dialog('center').dialog('setTitle','New User');
+                $('#fm').form('clear');
+                url = 'save_user.php';
+            }
+            function editUser(){
+                var row = $('#dg').datagrid('getSelected');
+                if (row){
+                    $('#dlg').dialog('open').dialog('center').dialog('setTitle','Edit User');
+                    $('#fm').form('load',row);
+                    url = 'update_user.php?id='+row.id;
+                }
+            }
+            function saveUser(){
+                $('#fm').form('submit',{
+                    url: url,
+                    onSubmit: function(){
+                        return $(this).form('validate');
+                    },
+                    success: function(result){
+                        var result = eval('('+result+')');
+                        if (result.errorMsg){
+                            $.messager.show({
+                                title: 'Error',
+                                msg: result.errorMsg
+                            });
+                        } else {
+                            $('#dlg').dialog('close');        // close the dialog
+                            $('#dg').datagrid('reload');    // reload the user data
+                        }
+                    }
+                });
+            }
+            function destroyUser(){
+                var row = $('#dg').datagrid('getSelected');
+                if (row){
+                    $.messager.confirm('Confirm','Are you sure you want to destroy this user?',function(r){
+                        if (r){
+                            $.post('destroy_user.php',{id:row.id},function(result){
+                                if (result.success){
+                                    $('#dg').datagrid('reload');    // reload the user data
+                                } else {
+                                    $.messager.show({    // show error message
+                                        title: 'Error',
+                                        msg: result.errorMsg
+                                    });
+                                }
+                            },'json');
+                        }
+                    });
+                }
+            }
+        </script>
     </div>
 </body>
 </html>
