--- a/web/WEB-STATIC/mobi/view/manage/manage.html
+++ b/web/WEB-STATIC/mobi/view/manage/manage.html
@@ -23,9 +23,11 @@
                 children: [{
                     text: '用户管理'
                 },{
-                    text: '权限管理'
+                    text: '菜单管理'
                 },{
                     text: '注册码管理'
+                },{
+                    text: '日志管理'
                 }]
             },{
                 text: '图书管理',
