--- a/web/WEB-STATIC/mobi/view/manage/login.html
+++ b/web/WEB-STATIC/mobi/view/manage/login.html
@@ -10,6 +10,23 @@
     <script src="../../resources/jquery-easyui-1.8.2/locale/easyui-lang-zh_CN.js"></script>
 </head>
 <body class="easyui-layout">
+<div data-options="region:'north',border:false" style="height:20%"></div>
+<div data-options="region:'center',border:false,iconCls:'icon-ok'">
+    <div style="margin:auto;width:400px;">
+        <div class="easyui-panel" title="布布-kindle电子书分享网站管理平台" style="width:400px;padding:30px 60px;">
+            <div style="margin-bottom:20px">
+                <input class="easyui-textbox" name="email" style="width:100%" data-options="prompt:'邮箱:',iconCls:'icon-man',required:true,validType:'email'">
+            </div>
+            <div style="margin-bottom:20px">
+                <input class="easyui-textbox" name="password" style="width:100%" data-options="prompt:'密码:',iconCls:'icon-lock',required:true">
+            </div>
+            <div style="text-align:center;padding:5px 0">
+                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-ok'"  onclick="submitForm()" style="width:100%">登录</a>
+            </div>
+        </div>
+    </div>
+
+</div>
 
 </body>
 </html>
