--- a/web/WEB-STATIC/mobi/view/manage/login.html
+++ b/web/WEB-STATIC/mobi/view/manage/login.html
@@ -3,11 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>布布-kindle电子书分享网站管理平台</title>
-    <link rel="stylesheet" href="../../resources/jquery-easyui-1.8.2/themes/material-teal/easyui.css">
-    <link rel="stylesheet" href="../../resources/jquery-easyui-1.8.2/themes/icon.css">
-    <script src="../../resources/jquery-easyui-1.8.2/jquery.min.js"></script>
-    <script src="../../resources/jquery-easyui-1.8.2/jquery.easyui.min.js"></script>
-    <script src="../../resources/jquery-easyui-1.8.2/locale/easyui-lang-zh_CN.js"></script>
+    <link rel="stylesheet" href="mobi/static/jquery-easyui-1.8.2/themes/material-teal/easyui.css">
+    <link rel="stylesheet" href="mobi/static/jquery-easyui-1.8.2/themes/icon.css">
+    <script src="mobi/static/jquery-easyui-1.8.2/jquery.min.js"></script>
+    <script src="mobi/static/jquery-easyui-1.8.2/jquery.easyui.min.js"></script>
+    <script src="mobi/static/jquery-easyui-1.8.2/locale/easyui-lang-zh_CN.js"></script>
+    <script>
+        function login() {
+            var email = $("#email").val();
+            var password = $("#password").val();
+            if(!email || !password) {
+                return;
+            }
+            $.ajax({
+                url:'mobi/manager/loging',
+                type:'post',
+                data:{"email":email,"password":password},
+                success:function (data) {
+                    var data = JSON.parse(data);
+                    console.log(data.message);
+                },
+                error:function () {
+                    
+                }
+            })
+            
+            
+            
+        }
+    </script>
 </head>
 <body class="easyui-layout">
 <div data-options="region:'north',border:false" style="height:20%"></div>
@@ -15,13 +39,13 @@
     <div style="margin:auto;width:400px;">
         <div class="easyui-panel" title="布布-kindle电子书分享网站管理平台" style="width:400px;padding:30px 60px;">
             <div style="margin-bottom:20px">
-                <input class="easyui-textbox" name="email" style="width:100%" data-options="prompt:'邮箱:',iconCls:'icon-man',required:true,validType:'email'">
+                <input class="easyui-textbox" id="email" style="width:100%" data-options="prompt:'邮箱:',iconCls:'icon-man',required:true,validType:'email'">
             </div>
             <div style="margin-bottom:20px">
-                <input class="easyui-textbox" name="password" style="width:100%" data-options="prompt:'密码:',iconCls:'icon-lock',required:true">
+                <input class="easyui-textbox" id="password" style="width:100%" data-options="prompt:'密码:',iconCls:'icon-lock',required:true">
             </div>
             <div style="text-align:center;padding:5px 0">
-                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-ok'"  onclick="submitForm()" style="width:100%">登录</a>
+                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-ok'"  onclick="login()" style="width:100%">登录</a>
             </div>
         </div>
     </div>
