mobi项目-管理平台

--- a/web/WEB-STATIC/mobi/view/manage/login.html
+++ b/web/WEB-STATIC/mobi/view/manage/login.html
@@ -35,6 +35,7 @@
 </head>
 <body class="easyui-layout">
 <div data-options="region:'north',border:false" style="height:20%"></div>
+<div data-options="region:'south'" style="height:20px;text-align: center">2019</div>
 <div data-options="region:'center',border:false,iconCls:'icon-ok'">
     <div style="margin:auto;width:400px;">
         <div class="easyui-panel" title="布布-kindle电子书分享网站管理平台" style="width:400px;padding:30px 60px;">
