--- a/web/WEB-STATIC/mobi/view/manage/login.html
+++ b/web/WEB-STATIC/mobi/view/manage/login.html
@@ -9,6 +9,7 @@
     <script src="mobi/static/jquery-easyui-1.8.2/jquery.easyui.min.js"></script>
     <script src="mobi/static/jquery-easyui-1.8.2/locale/easyui-lang-zh_CN.js"></script>
     <script>
+
         function login() {
             var email = $("#email").val();
             var password = $("#password").val();
@@ -18,9 +19,11 @@
             $.ajax({
                 url:'mobi/manager/loging',
                 type:'post',
+                dataType:'json',
                 data:{"email":email,"password":password},
                 success:function (data) {
-                    var data = JSON.parse(data);
+
+                    alert(data.message);
                     console.log(data.message);
                 },
                 error:function () {
@@ -37,10 +40,10 @@
     <div style="margin:auto;width:400px;">
         <div class="easyui-panel" title="布布-kindle电子书分享网站管理平台" style="width:400px;padding:30px 60px;">
             <div style="margin-bottom:20px">
-                <input class="easyui-textbox" id="email" style="width:100%" data-options="prompt:'邮箱:',iconCls:'icon-man',required:true,validType:'email'">
+                <input class="easyui-textbox" value="891511545@qq.com" id="email" style="width:100%" data-options="prompt:'邮箱:',iconCls:'icon-man',required:true,validType:'email'">
             </div>
             <div style="margin-bottom:20px">
-                <input class="easyui-textbox" id="password" style="width:100%" data-options="prompt:'密码:',iconCls:'icon-lock',required:true">
+                <input class="easyui-textbox" value="666666" id="password" style="width:100%" data-options="prompt:'密码:',iconCls:'icon-lock',required:true">
             </div>
             <div style="text-align:center;padding:5px 0">
                 <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-ok'"  onclick="login()" style="width:100%">登录</a>
@@ -48,5 +51,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
