mobi项目-管理平台

--- a/web/WEB-STATIC/mobi/view/manage/login.html
+++ b/web/WEB-STATIC/mobi/view/manage/login.html
@@ -17,17 +17,19 @@
                 return;
             }
             $.ajax({
-                url:'mobi/manager/loging',
+                url:'mobi/loging',
                 type:'post',
                 dataType:'json',
                 data:{"email":email,"password":password},
                 success:function (data) {
-
-                    alert(data.message);
-                    console.log(data.message);
+                    if(data.flag) {
+                        window.location.replace("mobi/manage");
+                    } else {
+                        alert(data.message);
+                    }
                 },
                 error:function () {
-                    
+                    alert("登录异常，请重新尝试！");
                 }
             })
         }
