--- a/web/WEB-STATIC/mobi/view/manage/manage.html
+++ b/web/WEB-STATIC/mobi/view/manage/manage.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>布布-kindle电子书分享网站管理平台</title>
-    <link rel="stylesheet" href="../../resources/jquery-easyui-1.8.2/themes/material-teal/easyui.css">
-    <link rel="stylesheet" href="../../resources/jquery-easyui-1.8.2/themes/icon.css">
-    <script src="../../resources/jquery-easyui-1.8.2/jquery.min.js"></script>
-    <script src="../../resources/jquery-easyui-1.8.2/jquery.easyui.min.js"></script>
-    <script src="../../resources/jquery-easyui-1.8.2/locale/easyui-lang-zh_CN.js"></script>
+    <link rel="stylesheet" href="../mobi/static/jquery-easyui-1.8.2/themes/material-teal/easyui.css">
+    <link rel="stylesheet" href="../mobi/static/jquery-easyui-1.8.2/themes/icon.css">
+    <script src="../mobi/static/jquery-easyui-1.8.2/jquery.min.js"></script>
+    <script src="../mobi/static/jquery-easyui-1.8.2/jquery.easyui.min.js"></script>
+    <script src="../mobi/static/jquery-easyui-1.8.2/locale/easyui-lang-zh_CN.js"></script>
 </head>
 <body class="easyui-layout">
     <div data-options="region:'north'" style="height:70px">
