--- a/web/WEB-STATIC/mobi/view/manage/manage.html
+++ b/web/WEB-STATIC/mobi/view/manage/manage.html
@@ -17,7 +17,7 @@
     <div data-options="region:'west'" style="width:260px;">
         <div id="sm" style="width:260px;" data-options="border:false"></div>
     </div>
-    <div id="menu" data-options="region:'center'">
+    <div id="menu" data-options="region:'center',border:false" >
 
     </div>
 </body>
