--- a/web/WEB-STATIC/mobi/view/manage/menu/uploadbook.html
+++ b/web/WEB-STATIC/mobi/view/manage/menu/uploadbook.html
@@ -1,26 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>布布-kindle电子书分享网站管理平台</title>
-    <link rel="stylesheet" href="../mobi/static/jquery-easyui-1.8.2/themes/material-teal/easyui.css">
-    <link rel="stylesheet" href="../mobi/static/jquery-easyui-1.8.2/themes/icon.css">
-    <script src="../mobi/static/jquery-easyui-1.8.2/jquery.min.js"></script>
-    <script src="../mobi/static/jquery-easyui-1.8.2/jquery.easyui.min.js"></script>
-    <script src="../mobi/static/jquery-easyui-1.8.2/locale/easyui-lang-zh_CN.js"></script>
-</head>
-<body>
-    <div class="easyui-panel" style="width:100%;max-width:400px;padding:30px 60px;">
-        <input id="fb" class="easyui-filebox" style="width:100%;" data-options="prompt:'请选择一个文件',buttonText:'选择文件'">
-        <a href="#" class="easyui-linkbutton" style="width:100%;">上传</a>
-        <input class="easyui-textbox" data-options="prompt:'书名'" style="width:100%;">
-        <input class="easyui-textbox" data-options="prompt:'作者'" style="width:100%;">
-        <input class="easyui-textbox" data-options="prompt:'豆掰评分'" style="width:100%;">
-        <input class="easyui-textbox" data-options="prompt:'分类'" style="width:100%;">
-        <input class="easyui-textbox" data-options="prompt:'标签'" style="width:100%;">
-        <input class="easyui-textbox" data-options="prompt:'豆掰评分'" style="width:100%;">
-        <input class="easyui-textbox" data-options="prompt:'作者简介'" style="width:100%;">
-        <input class="easyui-textbox" data-options="prompt:'书籍简介'" style="width:100%;">
-    </div>
-</body>
-</html>
+<div style="text-align:center;padding:5px">
+    <form id="uploadbook" action="" method="post"  enctype="multipart/form-data" >
+        <input class="easyui-filebox" style="width:300px">
+    </form>
+
+    <a href="javascript:void(0)" class="easyui-linkbutton" onclick="submitForm()">上传，请等待验证</a>
+</div>
+
